tests/typing/success/050-lambda.ec
op id : bool =
  (lambda (x:bool) (y:int), x) true 0.
