tests/typing/fail/0022-proji.ec
op foo (x:int * int) = x.`0.